# CalibratedActiveLearning

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
Code/: __init__.py  active_learning.py  solve_empirical_likelihood.py
Misc/: note.md
Simulation/test/: test.py  test_M_estimator.py  test_parallel.py  utils.py
calibrated_active_learning/: __init__.py  active_learning.py  solve_empirical_likelihood.py
calibrated_active_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
